--- a/apps/react-webrtc/package.json
+++ b/apps/react-webrtc/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@radix-ui/themes": "^3.2.1",
     "@tailwindcss/postcss": "^4",
+    "@types/node": "24.3.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "next": "15.3.3",
