--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"no test specified\"",
     "build:web": "pnpm run --filter react-webrtc build",
     "lint": "eslint .",
     "ncu": "npm-check-updates -i"
